cmake_minimum_required(VERSION 3.9)
project(structured_bn)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_C_STANDARD 99)
include_directories(include)
include_directories(/usr/local/include)
link_directories(lib)
link_directories(/usr/local/lib)
if(UNIX AND NOT APPLE)
  set(sdd "libsdd_linux.a")
  set(psdd "libpsdd_linux.a")
  set(gtest "libgtest_linux.a")
  set(gtest_main "libgtest_main_linux.a")
endif(UNIX AND NOT APPLE)

if(APPLE)
  set(sdd "libsdd_apple.a")
  set(psdd "libpsdd_apple.a")
  set(gtest "libgtest_apple.a")
  set(gtest_main "libgtest_main_apple.a")
endif(APPLE)
file(GLOB PSDD_TEST_SRC_FILES "test/*.cpp")
file(GLOB LIB_PSDD_SRC_FILES "src/*.h" "src/*.cpp" "src/*.c")
add_executable(structured_bn_test ${PSDD_TEST_SRC_FILES})
add_executable(structured_bn_main main.cpp)
add_library(structured_bn ${LIB_PSDD_SRC_FILES} )
target_link_libraries(structured_bn_test ${gtest} ${gtest_main} ${sdd} ${psdd} structured_bn gmp pthread)
target_link_libraries(structured_bn ${sdd} ${psdd} gmp)
target_link_libraries(structured_bn_main structured_bn ${psdd} ${sdd} gmp)
